# inspector_gcs

./: CMakeLists.txt  GCS-GUI.files  GCS-GUI.includes  README.md  inspector_gcs.pro  package.xml  plugin.xml  setup.py
config/: rostful.cfg
flask-RestAPI/: rest_api.py
flask-RestAPI/flask-env/: pip-selfcheck.json
include/: parametros.h
include/inspector_gcs/: QGCGeo.h  camera_calc.h  gcs_plugin.h  gcs_services.h  get_from_json.h  mission_builder.h  rostful_services.h
json_files/: archivo-bollullos.json  archivo-madrigalejo-2.json  archivo-madrigalejo.json  archivo-madrigalejo_1.json  archivo-madrigalejo_2.json  archivo-mision.json  archivo-utrera-2.json  archivo-utrera.json  cameras.json  mission_file copy.json  mission_file.json  mission_file_0.json  mission_file_2.json  mission_prueba.json
launch/: demo.rviz  inspector_gcs.launch  map_visualization.launch  map_visualization.rviz  mission_planner.launch
msg/: UalState.msg  UavList.msg
rqt/: gcs_gui.perspective  gcs_gui_2.perspective
rviz/: gui_visualization.rviz  ual.rviz
scripts/: rostful_services.py  run_rostful.py  test_publisher.py
scripts/SQLite/: SQL_correction.py  SQL_manager.py  SQL_manager_2.py  example.1.db  example.db  example2.db  example3.db
src/: QGCGeo.cc  UTM.cpp  camera_calc.cpp  example_multidrone.cpp  gcs_plugin.cpp  gcs_plugin.ui  gcs_plugin.ui.autosave  gcs_services.cpp  get_from_json.cpp  main.cpp  mission_builder.cpp  rostful_services.cpp
src/qt-GCS/: GCS.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
srv/: API_GetTopic.srv  API_GetTopicsList.srv  API_MissionCommand.srv  API_MissionFile.srv  MissionService.srv  UavListService.srv  gcsCreateMission.srv
